syntax = "proto3";

option go_package = "genproto/coins_service";

package coins_service;

service CoinsService{
    rpc Create(CreateCoin) returns(CoinPrimaryKey){}
    rpc GetById(CoinPrimaryKey) returns(Coin){}
    rpc GetList(GetListCoinRequest) returns(GetListCoinResponse){}
    rpc Update(UpdateCoin) returns(Coin){}
    rpc Delete(CoinPrimaryKey) returns(Empty){}
}

message Empty{}

message Coin{
    string id = 1;
    string name = 2;
    string coin_icon = 3;
    string coin_buy_price = 4;
    string coin_sell_price = 5;
    repeated HalfCoinPrice halfcoins = 6;
    string address = 7;
    string card_number = 8;
    string status = 9;
    string imageId = 10;
    string created_at = 11;
    string updated_at = 12;
}

message CoinPrimaryKey{
    string id = 1;
}

message CreateCoin{
    string name = 1;
    string coin_buy_price = 2;
    string coin_sell_price = 3;
    string address = 4;
    repeated HalfCoinPrice halfcoins = 5;
    string card_number = 6;
    string status = 7;
    string imageId = 8;
}

message UpdateCoin{
    string id = 1;
    string name = 2;
    string coin_icon = 3;
    string coin_buy_price = 4;
    string coin_sell_price = 5;
    string address = 6;
    repeated HalfCoinPrice halfcoins = 7;
    string card_number = 8;
    string status = 9;
}

message GetListCoinRequest{
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListCoinResponse{
    int64 count = 1;
    repeated Coin coins = 2;
}

message HalfCoinPrice{
    string halfCoinAmount = 1;
    string halfCoinPrice = 2;
}