syntax = "proto3";

option go_package = "genproto/coins_service";

package coins_service;
import "coin.proto";

service TelegramPremiumService{
    rpc CreatePrice(CreateTelegramPremiumPrice) returns(TelegramPremiumPrice){}
    rpc CreatePremium(CreateTelegramPremium)returns(TelegramPremium){}
    rpc GetPremiumById(TelegramPriemiumPrimaryKey) returns(TelegramPremium){}
    rpc GetPremiumList(GetPremiumListRequest) returns(GetPremiumListResponse){}
    rpc UpdateTransactionStatus(UpdateStatus) returns(Empty){}
    rpc PremiumTransaction(PremiumTransactionRequest) returns(Empty){}
    rpc GetList(GetListPremiumRequest) returns(GetPremiumTransactionResponse){}
}

message TelegramPremium{
    string id = 1;
    string name = 2;
    string card_number = 3;
    string img = 4;
    repeated TelegramPremiumPrice Price = 5;
    string created_at = 6;
    string updated_at = 7;
}

message TelegramPriemiumPrimaryKey{
    string id = 1;
}

message CreateTelegramPremium{
    string name = 2;
    string card_number = 3;
    string img = 4;
}

message CreateTelegramPremiumPrice{
    string month = 1;
    string price = 2;
    string premium_id = 3;
}

message TelegramPremiumPrice{
    string id = 1;
    string month = 2;
    string price = 3;
}

message PremiumTransactionRequest{
    string phone_number = 1;
    string telegram_username = 2;
    string telegram_price_id = 3;
    string payment_img = 4;
    string user_id = 5;
}

message UpdateStatus{
    string transaction_id = 1;
    string transaction_status = 2;
}

message GetUserId {
    string user_id = 1;
}

message GetListPremiumRequest{
    int64 limit = 1;
    int64 offset = 2;
}

message GetPremiumTransaction{
    string id = 1;
    string user_name = 2;
    string name = 3;
    string first_name = 4;
    string month = 5;
    string phone_number = 6;
    string created_at = 7;
    string updated_at = 8;
}   

message GetPremiumTransactionResponse{
    int64 count = 1;
    repeated GetPremiumTransaction transactions = 2;
}

message GetPremiumListRequest{
    int64 offset = 1;
    int64 limit = 2;
}

message GetPremiumListResponse{
    int64 count = 1;
    repeated TelegramPremium telegram_premium = 2;
}